[package]
name = "rust-code-snippets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[workspace]
members =[
    "data_structures",
    "basic_grammar",
    "anti_patterns",
    "wikibook_kujira",
    "process",
    "syncronization",
    "async_rust",
]

